{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "7e5dfc74-6796-4a20-9859-65b8a8173518",
            "actions": [
                {
                    "name": "MoveLW",
                    "type": "Button",
                    "id": "50eb07ef-7ce1-426e-b7d1-a838d19be5ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRW",
                    "type": "Button",
                    "id": "01b798be-1b55-4d47-b0cb-42c10ef2689d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldLW",
                    "type": "Button",
                    "id": "934b4cfe-7c44-4e37-a290-17865db15c3d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRW",
                    "type": "Button",
                    "id": "087f02e5-3da2-4a58-9db9-7436a4998631",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "d304d293-e38a-4eb3-9c33-c80208248137",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLW",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "46394bd8-d443-4a9b-93d0-7e7abaa0921a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLW",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1209d087-1b26-47b9-8c3b-c5100812ae0a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLW",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "87f97107-0ab6-4dc1-97a6-51249871ddd8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRW",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cca40e7c-0abc-44c1-8e17-4d97eead6ea6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRW",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "578134f2-f162-40dd-8114-92b4b2b394d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRW",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "96cef7d2-6435-4f1e-991d-f60614c511ff",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldLW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "791c071c-ef3b-4bf6-8a2d-44ce650fe1ee",
                    "path": "<Keyboard>/s",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRW",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}